learning ansible variables

--- a/03_vars.yml
+++ b/03_vars.yml
@@ -2,7 +2,7 @@
   hosts: all
   vars:
     url: play.example.com
-  task:
+  tasks:
     -name: print url
     ansible.builtin.debug:
       msg: URL - {{ url ))
