--- a/03_vars.yml
+++ b/03_vars.yml
@@ -14,4 +14,5 @@
     - name: print url
       ansible.builtin.debug:
         msg: URL - {{ url }}
-      vars: tasks.example.com
+      vars:
+        url: tasks.example.com
