learning ansible variables

--- a/03_vars.yml
+++ b/03_vars.yml
@@ -20,9 +20,10 @@
 
 - name: load vars from file
   hosts: all
-  vars_file:
+  vars_files:
     - exvars.yml
   tasks:
     - name: print url
       ansible.builtin.debug:
         msg: URL - {{ url }}
+
