--- a/roles/sample/tasks/main.yml
+++ b/roles/sample/tasks/main.yml
@@ -1,3 +1,11 @@
 - name: print hello world
   ansible.builtin.debug:
     msg: Hello world from sample role
+
+- name: print variable from role
+  ansible.builtin.debug:
+    msg: url - {{ url }}
+
+- name: print variable from play
+  ansible.builtin.debug:
+    msg: url_play - {{ url_play }}
