learning ansible shell module & output

--- a/03_vars.yml
+++ b/03_vars.yml
@@ -50,5 +50,5 @@
       ansible.builtin.shell: uptime
       register: output
     - name: print output
-      ansible.built.debug:
+      ansible.builtin.debug:
         msg: "{{ output }}"
