--- a/03_vars.yml
+++ b/03_vars.yml
@@ -51,4 +51,4 @@
       register: output
     - name: print output
       ansible.builtin.debug:
-        msg: "{{ output }}"
+        msg: "{{ output.stdout }}"
