--- a/04_parameter_store.yml
+++ b/04_parameter_store.yml
@@ -3,4 +3,4 @@
   tasks:
     - name: print a parameter
       ansible.builtin.debug:
-        msg: parameter-"{{ lookup('amazon.aws.aws_ssm', 'test.test', region='us-east-1' ) }}"
+        msg: parameter-{{ lookup('amazon.aws.aws_ssm', 'test.test', region='us-east-1' ) }}
