--- a/05_loops.yml
+++ b/05_loops.yml
@@ -9,3 +9,9 @@
       - banana
       - mango
 
+- name: demo on loops1
+  ansible.builtin.debug:
+    msg: fruit name - {{ item.name }}, quantity - {{ item.quantity }}
+  loops:
+    - {mame: apple, quantity: 10}
+    - {name: mango, quantity: 15}
