learning ansible loops

--- a/05_loops.yml
+++ b/05_loops.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   connection: local
   tasks:
-  - name: demp tasks for loops
+  - name: demo tasks for loops
     ansible.builtin.debug:
       msg: fruit name - {{ item }}
     loop:
