learning ansible loops

--- a/05_loops.yml
+++ b/05_loops.yml
@@ -12,7 +12,7 @@
   - name: demo on loops1
     ansible.builtin.debug:
       msg: fruit name - {{ item.name }}, quantity - {{ item.quantity }}
-    loops:
+    loop:
       - { mame: apple, quantity: 10 }
       - { name: mango, quantity: 15 }
 
