learning ansible loops

--- a/05_loops.yml
+++ b/05_loops.yml
@@ -13,6 +13,6 @@
     ansible.builtin.debug:
       msg: fruit name - {{ item.name }}, quantity - {{ item.quantity }}
     loop:
-      - { mame: apple, quantity: 10 }
+      - { name: apple, quantity: 10 }
       - { name: mango, quantity: 15 }
 
