learning ansible loops

--- a/06_facts.yml
+++ b/06_facts.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: print facts
       ansible.builtin.debug:
-        msg: arch - {{ ansible-ansible_architecture }}
+        msg: arch - {{ ansible_architecture }}
